--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "concurrently": "^9.2.0",
     "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1",
+    "qrcode-terminal": "^0.12.0",
     "sass": "^1.89.2",
     "vite": "^7.0.0"
   }
